Fixed styling on building page. Ocassionaly css issues with the banner missing / hidden behind the map slider.  Remove left over routes from bhs branch.  Fixed mapping to not refresh drawn points, also new points and old points fade in and old nicely.  A button was added to Clear Selected property.  A refresh bug was found with the maps that prevented drawing on first time.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1090,8 +1090,12 @@ cursor: default;
         overflow-y: auto;
         top: 42px;
     }
+    
     .main-content.map-padding{
-    	margin-top:50px;
+        top: 92px;
+    }
+    
+    .main-content.map-padding{
     }
 
     body{
